# Ai_tele_recoad

./: .cursorrules  .gitignore  env.example  main.py  pyproject.toml  sql.sql  sql_othere.sql  status_mapping_config.sql  test_advisor_analysis_report.py  test_free_markdown_conversion.py  test_weasyprint_conversion.py
app/: __init__.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: advisor_call_duration_stats.py  ai_advisor_stats.py  lead.py  scheduled_tasks.py  upload_record.py
app/core/: config.py  dependencies.py  event_bus.py  exceptions.py  logger.py
app/db/: database.py  ssh_tunnel.py
app/middleware/: cors.py  logging.py
app/models/: __init__.py  advisor_analysis_report.py  advisor_call_duration_stats.py  advisors.py  call_record.py  call_record_upload.py  call_records.py  claude_code_model.md  events.py  file_record.py  lead.py  redis_models.py  scheduled_tasks.py
app/schemas/: __init__.py  advisor_analysis_report.py  advisor_call_duration_stats.py  base.py  call_record.py  cloud_response.py  file_record.py  lead.py  scheduled_tasks.py  schemas.md
app/services/: aiBox_service.py  ai_tele_status_service.py  aibox_service.py  base_service.py  call_records_service.py  cloud_service.py  lead_service.py  redis_service.py  scheduled_tasks_service.py  scheduler_service.py  upload_record_service.py  wechat_bot_service.py
app/utils/: advisor_recording_report.py  ai_judge_is_need2.py  audio_transcription.py  markdown_to_pdf.py  xunfei.py
sql/: ai_box.sql  scheduled.sql  sql_lead.sql  status_mapping_config.sql
