[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tele"
version = "0.1.0"
description = "AI Tele FastAPI Project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # 核心框架
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    # 数据验证
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings",
    # Web相关
    "python-multipart",
    # 认证和安全
    # 分页和数据库
    "mysqlclient>=2.2.0",
    # 配置和环境
    "python-dotenv",
    # 远程连接
    "asyncssh",
    "websocket-client",
    # 任务队列
    "redis",
    # 依赖注入
    # 通用工具
    "numpy",
    "requests",
    "rich",
    "aiofiles",
    "aiomysql>=0.2.0",
    "mypy>=1.18.2",
    "types-aiofiles>=24.1.0.20250822",
]

[project.optional-dependencies]
dev = [
    # 构建工具 - 添加到开发依赖
    "setuptools>=61.0",
    "wheel",

    # 开发工具
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "isort",
    "flake8",
]
audio = [
    "pyaudio>=0.2.11",
]

[tool.uv]
link-mode = "copy"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*", "logs*", "uploads*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest-asyncio>=1.1.0",
]
